implemented mongo calls to the project

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,11 +32,11 @@ services:
 #    command:
 #      - infinity
 
-  mongodb_container:
+  mongodb:
     image: mongo:latest
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: root_password
+      MONGO_INITDB_ROOT_PASSWORD: rootpassword
     ports:
       - "27017:27017"
     volumes:
